#7 Added boilerplate for emotion picking activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,10 @@
             android:name=".FeelTriggerActivity"
             android:label="What triggered you">
         </activity>
+        <activity
+            android:name=".FeelEmotionActivity"
+            android:label="Emotion">
+        </activity>
     </application>
 
 </manifest>
