#17 Added feeling time activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,10 @@
             android:name=".FeelEmotionActivity"
             android:label="Emotion">
         </activity>
+        <activity
+            android:name=".FeelWhenActivity"
+            android:label="When">
+        </activity>
     </application>
 
 </manifest>
