Added activity to choose to understand feeling or feel better

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,10 @@
             android:name=".FeelReactedActivity"
             android:label="How you reacted">
         </activity>
+        <activity
+            android:name=".FeelUnderstandOrBetter"
+            android:label="Understand feeling or feel better">
+        </activity>
     </application>
 
 </manifest>
