--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,13 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    sourceSets {
+        main {
+            res {
+                srcDirs 'src/main/res', 'src/main/res/exercises'
+            }
+        }
+    }
 }
 
 dependencies {
@@ -46,5 +53,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 }
