--- a/.github/workflows/Android CI.yml
+++ b/.github/workflows/Android CI.yml
@@ -35,5 +35,5 @@ jobs:
       - name: Upload APK
         uses: actions/upload-artifact@v1
         with:
-          name: FEELK
+          name: app
           path: app/build/outputs/apk/debug/FEEL.apk
