--- a/.github/workflows/Android CI.yml
+++ b/.github/workflows/Android CI.yml
@@ -20,6 +20,19 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build
 
+  test:
+    name: Run Unit Tests
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Unit tests
+        run: bash ./gradlew test --stacktrace
+
   apk:
     name: Generate APK
     runs-on: ubuntu-latest
