--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,13 @@
     package="com.example.feel">
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:allowBackup="true"
+        android:fullBackupContent="@xml/backup_descriptor">
         <activity
             android:name=".MainActivity">
             <intent-filter>
@@ -18,7 +19,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.feelBetter.FeelBetterActivity" />
-        <activity android:name="com.example.feel.ui.feelBetter.exercises.Exercise1" />
         <activity android:name=".ui.understand.UnderstandActivity" />
     </application>
 
